crates/ink/tests/ui/trait_def/pass/with_namespace.rs
#[ink::trait_definition(namespace = "my_trait_namespace")]
pub trait WithNamespace {
    #[ink(message)]
    fn message(&self);
}

fn main() {}
