crates/ink/tests/ui/trait_def/fail/message_selector_invalid_1.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message, selector = true)]
    fn message(&self);
}

fn main() {}
